Bug 1120241 - Schedule the state machine when setting logical decoder state. r=cpearce a=lmandel